<resources>
    <string name="app_name">Planeja+</string>
    <string name="login_title">Planeja+</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Entrar</string>
    <string name="register_prompt">Cadastre-se</string>
    <string name="register_title">Crie sua conta</string>
    <string name="name">Nome</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Registrar</string>
    <string name="login_prompt">Login</string>
    <string name="balance">Saldo</string>
    <string name="income">Ganho</string>
    <string name="expense">Gasto</string>
    <string name="recent_transactions">Transações Recentes</string>
    <string name="add_transaction">Adicionar Transação</string>
    <string name="add_goal">Adicionar Meta</string>
    <string name="profile_info">Usuário</string>
    <string name="update_profile">Atualizar</string>
    <string name="change_password">Trocar Senha</string>
    <string name="current_password">Senha Antiga</string>
    <string name="new_password">Nova Senha</string>
    <string name="confirm_new_password">Confirmar Nova Senha</string>
    <string name="update_password">Confirmar</string>
    <string name="logout">Sair</string>
    <string name="dashboard">Home</string>
    <string name="transactions">Transação</string>
    <string name="goals">Meta</string>
    <string name="profile">Perfil</string>
    <string name="title_new_transaction">Adicionar Transação</string>
    <string name="description">Descrição</string>
    <string name="value">Valor</string>
    <string name="category">Categoria</string>
    <string name="date">Data</string>
    <string name="save_transaction">Adicionar</string>
    <string name="title_new_goal">Meta</string>
    <string name="goal_name">Título</string>
    <string name="target_amount">Valor da meta</string>
    <string name="current_amount">Valor atual</string>
    <string name="deadline">Tempo estimado</string>
    <string name="description_optional">Descrição</string>
    <string name="status">Status</string>
    <string name="save_goal">Salvar</string>
    <string name="status_in_progress">Em andamento</string>
    <string name="status_completed">Finalizado</string>
    <string name="status_canceled">Cancelado</string>
    <string name="titleDescriptionLanding">Alcance sua meta financeira</string>
    <string name="DescriptionLanding">Oferecemos os melhores recursos financeiros e o sistema mais seguro para ajudar você a aumentar seu patrimônio</string>
    <string name="continue_to_dashboard">Eu já tenho uma conta!</string>
</resources>