<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.appfinanceiro.ui.dashboard.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_transactions"
        android:name="com.appfinanceiro.ui.transaction.TransactionListFragment"
        android:label="@string/transactions"
        tools:layout="@layout/fragment_transaction_list" />

    <fragment
        android:id="@+id/navigation_goals"
        android:name="com.appfinanceiro.ui.goal.GoalListFragment"
        android:label="@string/goals"
        tools:layout="@layout/fragment_goal_list" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.appfinanceiro.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>
